cluster/personal/tare/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tare
    app.kubernetes.io/version: 8239c73
  name: tare
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tare
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tare
        app.kubernetes.io/version: 8239c73
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.43.0.53
        searches:
        - tare.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/tare:8239c73@sha256:1752d3f6f8880f2653f5ef73bb42a8385949ef6341251ba2a2d78b33f3d0ee8d
        name: tare
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 96Mi
          limits:
            cpu: 1000m
            memory: 768Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
