cluster/personal/tare/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tare
    app.kubernetes.io/version: 43d833a
  name: tare
spec:
  selector:
    app.kubernetes.io/name: tare
  ports:
  - name: http
    port: 8080
    targetPort: 8080
